--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "async-validator": "^3.5.1",
     "core-js": "^3.6.5",
     "font-awesome": "^4.7.0",
     "vue": "^3.0.0"
