--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "postcss-loader": "^5.2.0",
     "postcss-preset-env": "^6.7.0",
     "style-loader": "^2.0.0",
+    "ts-loader": "^9.1.1",
     "typescript": "^4.2.4",
     "vue-loader": "^16.2.0",
     "webpack": "^5.35.0",
