--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,6 +23,9 @@
       "types/*": [
         "types/*"
       ],
+      "packages/*": [
+        "packages/*"
+      ],
     },
     "lib": [
       "esnext",
@@ -38,7 +41,9 @@
     "tests/**/*.ts",
     "tests/**/*.tsx",
     "packages/**/*.ts",
-    "examples/**/*.ts"
+    "packages/**/*.vue",
+    "examples/**/*.ts",
+    "examples/**/*.vue"
   ],
   "exclude": [
     "node_modules"
