--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "core-js": "^3.11.0",
     "font-awesome": "^4.7.0",
     "highlight.js": "^10.7.2",
+    "mathjs": "^9.4.4",
     "regenerator-runtime": "^0.13.7",
     "vue": "^3.0.11",
     "vue-router": "^4.0.6",
